--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva de Armário</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,5 +17,6 @@
         <button onclick="reservarArmario()">Reservar</button>
         <p id="resultado"></p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
